# ChaosMod

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  CMakePresetsLinux.json  CMakePresetsWindows.json  CONTRIBUTING.md  ChaosMod.sln  ConanPresets.json  CopyChaosAssets.ps1  FreelancerChaosMod.sln  FreelancerChaosMod.sln.DotSettings  README.md  Utils.cpp  Utils.hpp  cli.py  conanfile.py  copy_assets.py  get_release_notes.py  requirements.txt  setup.ps1  sonar-project.properties  vcpkg.json
.ci/: build-project.ps1  install-dependencies.ps1  install-vcpkg.ps1
.circleci/: config.yml
.github/ISSUE_TEMPLATE/: BUG-REPORT.yml  bug_report.md  feature_request.md
.github/actions/release/: action.yml
.github/workflows/: announcement.yml  build-installer.yml  nightly.yml  sonar.yml
Assets/: InfocardImports.frc  InfocardImports.xml
Assets/DATA/: InitialWorld.ini  constants.ini
Assets/DATA/ASTEROIDS/: ew02_nomad_asteroids.ini  st01_nomad_asteroids.ini
Assets/DATA/CHAOS/: chaos_player_equipment.ini  commodities.ini  effects.ini  equipment.ini  fuses.ini  goods.ini  loadouts.ini  null.cur  rtc_shiparch.ini  sounds.ini
Assets/DATA/EQUIPMENT/: goods.ini  st_good.ini  weapon_equip.ini  weapon_good.ini
Assets/DATA/FONTS/: fonts.ini  rich_fonts.ini
Assets/DATA/INTERFACE/: keylist.ini  keymap.ini
Assets/DATA/MISSIONS/: empathy.ini  faction_prop.ini  npcships.ini  pilots_population.ini
Assets/DATA/SHIPS/: loadouts.ini  shiparch.ini
Assets/EXE/: ReShade.ini  ReShadePreset.ini  dacom.ini  flplusplus.ini  freelancer.ini  newplayer.fl
BinUtils/: CopyChaosAssets.ps1
ChaosMod/: ChaosMod.vcxproj  ChaosMod.vcxproj.filters  PCH.cpp  PCH.hpp  Resources.rc  main.cpp  resource.h
ChaosMod/Components/: Component.hpp  DebugMenu.cpp  DebugMenu.hpp  EffectDispatcher.cpp  EffectDispatcher.hpp  Failsafe.cpp  Failsafe.hpp  KeyStates.cpp  KeyStates.hpp  LuaScripts.cpp  LuaScripts.hpp  MetaModifiers.hpp  Mp3Manager.cpp  Mp3Manager.hpp  Shortcuts.cpp  Shortcuts.hpp  SplashTexts.cpp  SplashTexts.hpp  TwitchVoting.cpp  TwitchVoting.hpp
ChaosMod/Effects/: ActiveEffect.hpp  AddressTable.hpp  MemoryEffect.cpp  MemoryEffect.hpp  PersistentEffect.hpp
ChaosMod/Exceptions/: NpcLoadingException.hpp
ChaosMod/Include/: Constants.hpp  CrashCatcher.hpp  PCH.cpp  PCH.hpp  Reflection.hpp  Utils.hpp
ChaosMod/Include/Components/: Adjectives.txt  ChatConsole.hpp  ConfigManager.hpp  DiscordManager.hpp  GlobalTimers.hpp  HudInterface.hpp  KeyManager.hpp  MoviePlayer.hpp  PersonalityHelper.hpp  Random.hpp  ReshadeManager.hpp  SaveManager.hpp  ShipManipulator.hpp  SpaceObjectSpawner.hpp  SplashScreen.hpp  TTS.hpp  Teleporter.hpp  TwitchVoting.hpp  UiManager.hpp
ChaosMod/Include/CoreComponents/: ChaosTimer.hpp  PatchNotes.hpp  TwitchVoting.hpp
ChaosMod/Include/DirectX/: Drawing.hpp
ChaosMod/Include/Effects/: ActiveEffect.hpp  AddressTable.hpp  MemoryEffect.hpp  PersistentEffect.hpp
ChaosMod/Include/Memory/: OnHit.hpp  OnSound.hpp  OnSystemStatusChange.hpp  ShipInfocardOverride.hpp
ChaosMod/Include/VanillaHudComponents/: Structures.hpp  TButton.hpp  TShip.hpp  TTextEdit.hpp  TWire.hpp
ChaosMod/Source/: ChaosMod.cpp  CrashCatcher.cpp  Utils.cpp
ChaosMod/Source/Components/: CameraController.cpp  ConfigManager.cpp  DiscordManager.cpp  EventManager.cpp  HudInterface.cpp  KeyManager.cpp  PersonalityHelper.cpp  ReshadeManager.cpp  ShipManipulator.cpp  SpaceObjectSpawner.cpp  SplashScreen.cpp  TTS.cpp  Teleporter.cpp  TwitchVoting.cpp  UiManager.cpp
ChaosMod/Source/CoreComponents/: ChaosTimer.cpp  PatchNotes.cpp  TwitchVoting.cpp
ChaosMod/Source/DirectX/: D3DBase.cpp  D3DDevice.cpp  D3DIndexBuffer.cpp  D3DSurface.cpp  D3DSwapChain.cpp  D3DTexture.cpp  D3DTypes.cpp  D3DVertexBuffer.cpp  D3DVolume.cpp  InterfaceQuery.cpp
ChaosMod/Source/Effects/: MemoryEffect.cpp
ChaosMod/Source/ImGui/: ImGuiManager.cpp
ChaosMod/Source/Memory/: OnHit.cpp  OnSound.cpp  OnSystemStatusChange.cpp  ShipInfocardOverride.cpp
ChaosMod/Systems/: BugFixes.hpp  CameraController.cpp  CameraController.hpp  ChaosTimer.cpp  ChaosTimer.hpp  ConfigManager.cpp  ConfigManager.hpp  EventManager.cpp  EventManager.hpp  HudInterface.cpp  HudInterface.hpp  ImGuiDX9.hpp  ImGuiWin32.cpp  KeyManager.cpp  KeyManager.hpp  ReshadeManager.cpp  ReshadeManager.hpp  ShipManipulator.cpp  ShipManipulator.hpp  Teleporter.cpp  Teleporter.hpp  UiManager.cpp  UiManager.hpp
ChaosMod/Systems/DirectX/: D3DBase.cpp  D3DDevice.cpp  D3DIndexBuffer.cpp  D3DSurface.cpp  D3DSwapChain.cpp  D3DTexture.cpp  D3DTypes.cpp  D3DTypes.hpp  D3DVertexBuffer.cpp  D3DVolume.cpp  Drawing.hpp  InterfaceQuery.cpp  InterfaceQuery.hpp  d3d.hpp
ChaosMod/Systems/GameEvents/: OnHit.cpp  OnHit.hpp  OnSound.cpp  OnSound.hpp
ChaosMod/Systems/HudComponents/: Interfaces.hpp  Structures.hpp  TCycle.hpp  TScroll.hpp  TShip.hpp  (+3 more)
ChaosMod/Utilities/: AssetTracker.hpp  ChatConsole.hpp  Component.hpp  Constants.hpp  Detour.hpp  MemChange.cpp  MemChange.hpp  OffsetHelper.hpp  PersonalityHelper.cpp  PersonalityHelper.hpp  Random.hpp  Singleton.hpp  SpaceObjectSpawner.cpp  SpaceObjectSpawner.hpp
Include/: FLCoreCommon.h  FLCoreDALib.h  FLCoreDefs.cpp  FLCoreDefs.h  FLCoreServer.h
Installer/: external.iss  globals.iss  mod_options.iss  setup.iss  ui.iss  utilities.iss
Sidecars/ChaosController/: Application.cs  ChaosController.csproj  ImGuiRenderer.cs  Program.cs  Sdl3.cs
Sidecars/ChaosMod.Api/: ChaosMod.Api.csproj  WebApi.cs
Sidecars/ChaosMod.Common/: ChaosMod.Common.csproj  ChaosModConfig.cs
Sidecars/VotingProxy/: ChaosModController.cs  README.md  VoteOption.cs  VotingProxy.cs  VotingProxy.csproj
TwitchChatVotingProxy/: ChaosModController.cs  Configuration.cs  TwitchChatVotingProxy.cs  TwitchChatVotingProxy.csproj  VoteOption.cs
TwitchChatVotingProxy/ChaosPipe/: ChaosPipeClient.cs  IChaosPipeClient.cs  Messages.cs  OnGetCurrentVotesArgs.cs  OnGetResultArgs.cs  OnNewVoteArgs.cs
TwitchChatVotingProxy/Contracts/: IVoteOption.cs
TwitchChatVotingProxy/VotingReceiver/: IVotingReceiver.cs  OnMessageArgs.cs  TwitchVotingReceiver.cs
profiles/: linux  windows
(+559 files in other folders)
